Fix spacing of the phone

--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -108,7 +108,7 @@ a:active {
 
 .download-buttons {
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 45px;
 }
 
 .download-buttons-store {
@@ -265,7 +265,7 @@ a:active {
 
   .download-buttons {
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
